--- a/index.html
+++ b/index.html
@@ -100,29 +100,32 @@
             <div class="container">
                 <h2 class="product-title">Чем мы занимаемся</h2>
                 <ul class="product-list list">
-                    <li class="product-item">
+                    <li class="product-item product-one">
                         <img 
                         src="./images/box1.jpg"
                         alt="создание сайта"
                         width="370"
                         height="294"
                         />
+                        <p class="product-text">Десктопные приложения</p>
                     </li>
-                    <li class="product-item">
+                    <li class="product-item product-two">
                         <img 
                         src="./images/box2.jpg"
                         alt="создание мобильной версии"
                         width="370"
                         height="294"
                         />
+                        <p class="product-text">Мобильные приложения</p>
                     </li>
-                    <li class="product-item">
+                    <li class="product-item product-three">
                         <img 
                         src="./images/box3.jpg"
                         alt="тестированте"
                         width="370"
                         height="294"
                         />
+                        <p class="product-text">Дизайнерские решения</p>
                     </li>
                 </ul>
             </div>
