--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <div class="container">
                 <h2 class="product-title">Чем мы занимаемся</h2>
                 <ul class="product-list list">
-                    <li class="product-item product-one">
+                    <li class="product-item">
                         <img 
                         src="./images/box1.jpg"
                         alt="создание сайта"
@@ -109,7 +109,7 @@
                         />
                         <p class="product-text">Десктопные приложения</p>
                     </li>
-                    <li class="product-item product-two">
+                    <li class="product-item">
                         <img 
                         src="./images/box2.jpg"
                         alt="создание мобильной версии"
@@ -118,7 +118,7 @@
                         />
                         <p class="product-text">Мобильные приложения</p>
                     </li>
-                    <li class="product-item product-three">
+                    <li class="product-item">
                         <img 
                         src="./images/box3.jpg"
                         alt="тестированте"
