--- a/portfolio.html
+++ b/portfolio.html
@@ -62,23 +62,30 @@
 
                 <ul class="portfolio-list list">
                     <li class="portfolio-item">
-                        <a href="" class="portfolio-link">
+                        <div class="portfolio-overley">
+                            <a href="" class="portfolio-link">
                             <img src="./images/portf-img-1.jpg"
                             alt="вуб-сайт на ноутбуке"
                             width="370"
                             height="294"/>
+                                <p class="overley-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                         <div class="portfolio-item-content">
                             <h2 class="portfolio-title">Технокряк</h2>
                             <p class="portfolio-text">Веб-сайт</p>
                         </div>
                         </a>
+                        
                     </li>
                     <li class="portfolio-item">
-                        <a href="" class="portfolio-link">
-                            <img src="./images/portf-img-2.jpg" 
-                            alt="баскетбол"
-                            width="370"
-                            height="294"/>
+                        <div class="portfolio-overley">
+                            <a href="" class="portfolio-link">
+                                <img src="./images/portf-img-2.jpg" alt="вуб-сайт на ноутбуке" width="370" height="294" />
+                                <p class="overley-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                    платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                        </div>
                         <div class="portfolio-item-content">
                             <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
                             <p class="portfolio-text">Дизайн</p>
@@ -86,11 +93,13 @@
                         </a>
                     </li>
                     <li class="portfolio-item">
-                        <a href="" class="portfolio-link">
-                            <img src="./images/portf-img-3.jpg" 
-                            alt="логотип ресторана"
-                            width="370"
-                            height="294"/>
+                        <div class="portfolio-overley">
+                            <a href="" class="portfolio-link">
+                                <img src="./images/portf-img-3.jpg" alt="вуб-сайт на ноутбуке" width="370" height="294" />
+                                <p class="overley-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                    платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                        </div>
                         <div class="portfolio-item-content">
                             <h2 class="portfolio-title">Ресторан Seafood</h2>
                             <p class="portfolio-text">Приложение</p>
@@ -98,11 +107,13 @@
                         </a>
                     </li>
                     <li class="portfolio-item">
-                        <a href="" class="portfolio-link">
-                            <img src="./images/portf-img-4.jpg" 
-                            alt="наушники"
-                            width="370"
-                            height="294"/>
+                        <div class="portfolio-overley">
+                            <a href="" class="portfolio-link">
+                                <img src="./images/portf-img-4.jpg" alt="вуб-сайт на ноутбуке" width="370" height="294" />
+                                <p class="overley-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                    платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                        </div>
                         <div class="portfolio-item-content">
                             <h2 class="portfolio-title">Проект Prime</h2>
                             <p class="portfolio-text">Маркетинг</p>
@@ -110,11 +121,13 @@
                         </a>
                     </li>
                     <li class="portfolio-item">
-                        <a href="" class="portfolio-link">
-                            <img src="./images/portf-img-5.jpg" 
-                            alt="коробки"
-                            width="370"
-                            height="294"/>
+                        <div class="portfolio-overley">
+                            <a href="" class="portfolio-link">
+                                <img src="./images/portf-img-5.jpg" alt="вуб-сайт на ноутбуке" width="370" height="294" />
+                                <p class="overley-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                    платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                        </div>
                         <div class="portfolio-item-content">
                             <h2 class="portfolio-title">Проект Boxes</h2>
                             <p class="portfolio-text">Приложение</p>
@@ -122,11 +135,13 @@
                         </a>
                     </li>
                     <li class="portfolio-item">
-                        <a href="" class="portfolio-link">
-                            <img src="./images/portf-img-6.jpg" 
-                            alt="монитор"
-                            width="370"
-                            height="294"/>
+                        <div class="portfolio-overley">
+                            <a href="" class="portfolio-link">
+                                <img src="./images/portf-img-6.jpg" alt="вуб-сайт на ноутбуке" width="370" height="294" />
+                                <p class="overley-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                    платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                        </div>
                         <div class="portfolio-item-content">
                             <h2 class="portfolio-title">Inspiration has no Borders</h2>
                             <p class="portfolio-text">Веб-сайт</p>
@@ -134,11 +149,13 @@
                         </a>
                     </li>
                     <li class="portfolio-item">
-                        <a href="" class="portfolio-link">
-                            <img src="./images/portf-img-7.jpg" 
-                            alt="журнал"
-                            width="370"
-                            height="294"/>
+                        <div class="portfolio-overley">
+                            <a href="" class="portfolio-link">
+                                <img src="./images/portf-img-7.jpg" alt="вуб-сайт на ноутбуке" width="370" height="294" />
+                                <p class="overley-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                    платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                        </div>
                         <div class="portfolio-item-content">
                             <h2 class="portfolio-title">Издание Limited Edition</h2>
                             <p class="portfolio-text">Дизайн</p>
@@ -146,11 +163,13 @@
                         </a>
                     </li>
                     <li class="portfolio-item">
-                        <a href="" class="portfolio-link">
-                            <img src="./images/portf-img-8.jpg" 
-                            alt="бирка"
-                            width="370"
-                            height="294"/>
+                        <div class="portfolio-overley">
+                            <a href="" class="portfolio-link">
+                                <img src="./images/portf-img-8.jpg" alt="вуб-сайт на ноутбуке" width="370" height="294" />
+                                <p class="overley-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                    платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                        </div>
                         <div class="portfolio-item-content">
                             <h2 class="portfolio-title">Проект LAB</h2>
                             <p class="portfolio-text">Маркетинг</p>
@@ -158,11 +177,13 @@
                         </a>
                     </li>
                     <li class="portfolio-item">
-                        <a href="" class="portfolio-link">
-                            <img src="./images/portf-img-9.jpg" 
-                            alt="приложение на ноуте"
-                            width="370"
-                            height="294"/>
+                        <div class="portfolio-overley">
+                            <a href="" class="portfolio-link">
+                                <img src="./images/portf-img-9.jpg" alt="вуб-сайт на ноутбуке" width="370" height="294" />
+                                <p class="overley-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                    платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                        </div>
                         <div class="portfolio-item-content">
                             <h2 class="portfolio-title">Growing Business</h2>
                             <p class="portfolio-text">Приложение</p>
@@ -197,17 +218,35 @@
                 <h3 class="footer-title">присоединяйтесь</h3>
                 <ul class="footer-list list">
                     <li class="footer-social-item"><a href="" class="footer-social-link">
-                        <svg class="icon-social" width="20" height="20">
-                        <use href="./images/icons.svg#icon-instagram"></use></svg></a></li>
+                            <svg class="icon-social" width="20" height="20">
+                                <use href="./images/icons.svg#icon-instagram"></use>
+                            </svg></a></li>
                     <li class="footer-social-item"><a href="" class="footer-social-link">
-                        <svg class="icon-social" width="20" height="20">
-                        <use href="./images/icons.svg#icon-twitter"></use></svg></a></li>
+                            <svg class="icon-social" width="20" height="20">
+                                <use href="./images/icons.svg#icon-twitter"></use>
+                            </svg></a></li>
                     <li class="footer-social-item"><a href="" class="footer-social-link">
-                        <svg class="icon-social" width="20" height="20">
-                            <use href="./images/icons.svg#icon-facebook"></use></svg></a></li>
+                            <svg class="icon-social" width="20" height="20">
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                            </svg></a></li>
                     <li class="footer-social-item"><a href="" class="footer-social-link">
-                        <svg class="icon-social" width="20" height="20">
-                            <use href="./images/icons.svg#icon-linkedin"></use></svg></a></li>
+                            <svg class="icon-social" width="20" height="20">
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                            </svg></a></li>
+                </ul>
+            </div>
+            <div class="footer-subscribe">
+                <h3 class="footer-title">Подпишитесь на рассылку</h3>
+                <ul class="footer-list list">
+                    <li class="footer-subscribe-item">
+                        <button type="button" lang="en" class="footer-subscribe-btn">E-mail</button>
+                    </li>
+                    <li class="footer-subscribe-item">
+                        <button type="button" class="footer-send-btn">Подписаться
+                            <svg class="icon-subscribe" width="24" height="24">
+                                <use href="./images/icons.svg#icon-icon-send"></use>
+                            </svg></button>
+                    </li>
                 </ul>
             </div>
         </div>
